sbatch/slurm_splitAndEvaluate_1198939.out
Traceback (most recent call last):
  File "SplittingandEvaluating.py", line 11, in <module>
    import DetectionEvalSourceCode as det
  File "/scratch/njw275/python_files/DetectionEvalSourceCode.py", line 13
    if (start_time == 0):
                        ^
IndentationError: unindent does not match any outer indentation level
